# instructed-retriever

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  deploy_agent.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/: system_specs.yaml
eval/: run_eval.py  scorers.py
src/instructed_retriever/: __init__.py  redact.py  responses_agent.py
src/instructed_retriever/agent/: __init__.py  config.py  context.py  runner.py
src/instructed_retriever/agent/dspy/: instructions.py  prompts.py  reranker.py  schemas.py  signatures.py
tests/: test_runner.py
